--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ header1{display: flex; width:100%;}
 <body>
 
 <div class="container">
-<section id="section1"><img src="I.webp" width="110"  height="110">
+<section id="section1"><img src="0.webp" width="110"  height="110">
 </section>
 
 <section id="section2"><center><h2 id="titulo">Sports</h2></center>
@@ -121,7 +121,8 @@ header1{display: flex; width:100%;}
 <a href="Sports_developer-shop.apk" download="Sports_developer-shop" ><center>Descargar</center></a>
 </div>
   
- 
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v16.0" nonce="QmBaIJdX"></script> 
   
   
   
@@ -205,7 +206,7 @@ tamaño   15.82 MB
   
   
 <div id="comentarios"></div>
-  
+<div class="fb-comments" data-href="https://developer-shop.github.io/Sports/" data-width="100" data-numposts="5"></div>  
   
  <script type="text/javascript">(function(d, t, e, m){
     
